--- a/src/Components/TopBar/topbar.scss
+++ b/src/Components/TopBar/topbar.scss
@@ -33,6 +33,11 @@
                     margin-left: 5px;
                 }
             }
+
+            .top-icon {
+                cursor: pointer;
+                font-size: 20px;
+            }
         }
 
         .topright {
