--- a/src/Components/Features/feature.scss
+++ b/src/Components/Features/feature.scss
@@ -1,111 +1,70 @@
 .feature {
-    width: 100%;
     display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    box-shadow: 2px 4px 10px 1px rgb(201, 201, 201);
-    border-radius: 10px;
-    height: 100px;
+    justify-content: space-evenly;
+    margin: 30px 0px 0px 0px;
+    border-bottom: 0.5px solid lightgray;
+  
+  
+    .feature-card {
+        color: #1693C4;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 2px 4px 10px 1px rgb(201, 201, 201);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      height: 100px;
+      margin-bottom: 30px;
+     
+  
+      &.green {
+        background: rgba(200, 250, 205, 1);
+      }
+  
+      &.blue {
+        background: rgba(208, 242, 255, 1);
+      }
+  
+      &.yellow {
+        background: rgba(255, 247, 205, 1);
+      }
 
-
-    .feature-item-left,
-    .feature-item-right {
+      
+  
+      .count-wrapper {
         display: flex;
+        align-items: center;
+        justify-content: center;
         flex-direction: column;
-        justify-content: space-between;
-        cursor: pointer;
-
-        .feature-title {
-            font-size: 18px;
-            font-weight: bold;
-            color: rgb(160, 160, 160);
-        }
-
-        .counter {
-            font-size: 28px;
-            font-weight: bold;
-        }
-
-        .link {
-            font-size: 12px;
-            border-bottom: 1px solid gray;
-            width: max-content;
-        }
-
-        .icon {
-            align-self: end;
-            border-radius: 3px;
-        }
-
-        .percentage {
-            display: flex;
-            align-items: center;
-            font-size: 14px;
-        }
-
-        .positive {
-            color: green;
-            font-weight: bold;
-        }
-
-        .person {
-            color: crimson;
-            background-color: rgba(255, 0, 0, 0.2);
-        }
-
-        .shoppingcart {
-            color: goldenrod;
-            background-color: rgba(218, 165, 32, 0.2);
-
-        }
-
-        .earning {
-            color: green;
-            background-color: rgba(0, 128, 0, 0.2);
-
-        }
-
-        .balance {
-            color: purple;
-            background-color: rgba(128, 0, 128, 0.2);
-        }
+        height: 50%;
+        width: 100%;
+      }
+  
+      .count {
+        font-size:30px;
+      
+      }
+  
+      .subcount-wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100%;
+        border: 1px solid #ccc;
+        margin-top: 20px;
+        padding: 5px;
+        height: 50%;
+      }
+  
+      .subcount {
+        font-size: 14px;
+        margin-right: 5px;
+        margin-bottom: 5px;
+        padding: 2px;
+        border: 1px solid #ccc;
+      }
     }
-}
-
-
-
-
-
-.feature-money-container {
-    margin: 10px 0px;
-    display: flex;
-    align-items: center;
-}
-
-.feature-money {
-    font-size: 30px;
-    font-weight: 600;
-}
-
-.feature-moneyrate {
-    display: flex;
-    align-items: center;
-    margin-left: 20px;
-}
-
-.feature-icon-positive {
-    font-size: 14px;
-    margin-left: 5px;
-    color: green;
-}
-
-.feature-icon-negative {
-    font-size: 14px;
-    margin-left: 5px;
-    color: red;
-}
-
-.feature-subtitle {
-    font-size: 15px;
-    color: #555;
-}
+  }
+  
