--- a/src/Components/Features/feature.scss
+++ b/src/Components/Features/feature.scss
@@ -1,5 +1,6 @@
 .feature {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     margin: 30px 0px 0px 0px;
     border-bottom: 0.5px solid lightgray;
