--- a/src/Components/Horizontal Bar/horizontal.scss
+++ b/src/Components/Horizontal Bar/horizontal.scss
@@ -1,7 +1,38 @@
-.bar{
+.bar {
     display: flex;
     justify-content: center;
     text-align: center;
     margin: 30px 0px;
     border-bottom: 0.5px solid lightgray;
-}
+  
+    .recharts-wrapper {
+      width: 100%;
+      height: 100%;
+  
+      .recharts-cartesian-grid-horizontal line {
+        stroke: lightgray;
+      }
+  
+      .recharts-cartesian-axis-tick-value {
+        font-size: 12px;
+        fill: black;
+      }
+  
+      .recharts-legend {
+        font-size: 14px;
+        fill: black;
+      }
+    }
+  
+    @media only screen and (max-width: 768px) {
+      /* Styles for smaller screens */
+      .recharts-cartesian-axis-tick-value {
+        font-size: 10px;
+      }
+  
+      .recharts-legend {
+        font-size: 12px;
+      }
+    }
+  }
+  
