--- a/src/Components/MapComponent/map.scss
+++ b/src/Components/MapComponent/map.scss
@@ -1,16 +1,28 @@
 .mapcomponent-wrapper {
-    display: flex;
-    width: 100%;
-    margin-bottom: 30px;
-    border-bottom: 0.5px solid lightgray;
-  
-  
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 30px;
+  margin-right: 30px;
+  border-bottom: 0.5px solid lightgray;
+
   .map-chart {
     flex: 1;
-    margin-right: 20px;
+    // margin-right: 20px;
+    width: 50%;
+
+    // @media only screen and (max-width: 768px) {
+    //   width: 100%;
+    //   margin-right: 0;
+    //   margin-bottom: 20px;
+    // }
   }
-  
+
   .map {
     flex: 1;
+    width: 50%;
+
+    // @media only screen and (max-width: 768px) {
+    //   width: 100%;
+    // }
   }
 }
