--- a/src/Components/TopBar/topbar.scss
+++ b/src/Components/TopBar/topbar.scss
@@ -8,85 +8,96 @@
     position: sticky;
     top: 0;
     z-index: 999;
-
+  
     .topbar-wrapper {
-        width: 100%;
-        padding: 20px;
+      width: 100%;
+      padding: 20px;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: space-between;
+  
+      .flipcart-content {
         display: flex;
         align-items: center;
-        justify-content: space-between;
-
-        .flipcart-content {
-            display: flex;
-            align-items: center;
-            box-shadow: 2px 4px 10px 1px rgb(201, 201, 201);
-            padding: 4px;
-            border-radius: 5px;
-
-            .flipcart-logo {
-                height: 30px;
-                width: 30px;
-                object-fit: cover;
-            }
-
-            .flipcart-title {
-                font-size: 14px;
-                margin-right: 3px;
-            }
+        box-shadow: 2px 4px 10px 1px rgb(201, 201, 201);
+        padding: 4px;
+        border-radius: 5px;
+  
+        .flipcart-logo {
+          height: 30px;
+          width: 30px;
+          object-fit: cover;
         }
-
-        .topright {
-            display: flex;
-            align-items: center;
-
-
-            .premium-content {
-                display: flex;
-                align-items: center;
-                background: linear-gradient(100.71deg, #E9B435 17.29%, #202124 260.67%);
-                color: white;
-                padding: 10px;
-                border-radius: 5px;
-                margin-right: 20px;
-                justify-content: space-between;
-    
-                .premium-icon {
-                    height: 20px;
-                    width: 20px;
-                    
-                }
-    
-                .premium-title {
-                    font-size: 15px;
-    margin: 0 5px;
-                }
-            }
-            .help-content {
-                display: flex;
-                align-items: center;
-                background: rgba(243, 243, 243, 1);
-                padding: 8px;
-                border-radius: 5px;
-                margin-right: 20px;
-                justify-content: space-between;
-    
-                .help-icon {
-                    height: 20px;
-                    width: 20px;
-                    
-                }
-    
-                .help-title {
-                    font-size: 15px;
-    margin: 0 5px;
-                }
-            }
-
-            .topAvatar {
-                width: 50px;
-                height: 50px;
-                border-radius: 50%;
-            }
+  
+        .flipcart-title {
+          font-size: 14px;
+          margin-right: 3px;
         }
+      }
+  
+      .topright {
+        display: flex;
+        align-items: center;
+        margin-top: 10px;
+  
+        .premium-content {
+          display: flex;
+          align-items: center;
+          background: linear-gradient(100.71deg, #E9B435 17.29%, #202124 260.67%);
+          color: white;
+          padding: 10px;
+          border-radius: 5px;
+          margin-right: 20px;
+          justify-content: space-between;
+  
+          .premium-icon {
+            height: 20px;
+            width: 20px;
+          }
+  
+          .premium-title {
+            font-size: 15px;
+            margin: 0 5px;
+          }
+        }
+  
+        .help-content {
+          display: flex;
+          align-items: center;
+          background: rgba(243, 243, 243, 1);
+          padding: 8px;
+          border-radius: 5px;
+          margin-right: 20px;
+          justify-content: space-between;
+  
+          .help-icon {
+            height: 20px;
+            width: 20px;
+          }
+  
+          .help-title {
+            font-size: 15px;
+            margin: 0 5px;
+          }
+        }
+  
+        .topAvatar {
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+        }
+      }
     }
-}
+  
+    // @media screen and (max-width: 768px) {
+    //   .topbar-wrapper {
+    //     justify-content: center;
+    //   }
+      
+    //   .topright {
+    //     margin-top: 20px;
+    //   }
+    // }
+  }
+  
