--- a/src/Components/VerticalBar/vertical.scss
+++ b/src/Components/VerticalBar/vertical.scss
@@ -4,4 +4,9 @@
     text-align: center;
     margin: 30px 0px;
     border-bottom: 0.5px solid lightgray;
+
+    // @media screen and (max-width: 768px) {
+    //     flex-direction: column;
+    //     align-items: center;
+    //   }
 }
