--- a/src/Components/sidebar/sidebar.scss
+++ b/src/Components/sidebar/sidebar.scss
@@ -16,6 +16,9 @@
         box-shadow: 2px 4px 10px 1px rgb(201, 201, 201);
         border-radius: 10px;
       }
+      @media screen and (max-width: 767px) {
+        height: 80px;
+      }
     }
   
     .sidebar-menu-center {
@@ -84,8 +87,8 @@
         text-transform: capitalize;
         text-align: center;
   
-        @media only screen and (max-width: 1200px) {
-          font-size: 12px;
+        @media screen and (max-width: 767px) {
+          font-size: 14px;
         }
       }
   
@@ -119,7 +122,32 @@
             color: #7451f8;
           }
         }
+        @media screen and (max-width: 767px) {
+          padding: 5px;
+        }
       }
+      // @media only screen and (max-width: 767px) {
+      //   margin: 10px 15px;
+      //   height: auto;
+      //   padding: 10px;
+    
+      //   .sidebar-top {
+      //     height: 80px;
+      //   }
+    
+      //   .sidebar-menu-center {
+      //     padding: 10px;
+      //     margin-top: 10px;
+      //   }
+    
+      //   .sidebar-title {
+      //     font-size: 14px;
+      //   }
+    
+      //   .sidebar-submenu {
+      //     padding: 5px;
+      //   }
+      // }
+     
     }
-}
-  
+  }
